openmediavault (0.6.0.11) stable; urgency=low

  * Various code improvements.
  * Add dashboard widget support in the admin WebGUI.
  * Missing filesystems can be removed now.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 13 May 2014 00:11:51 +0200

openmediavault (0.6.0.10) stable; urgency=low

  * Various code improvements.
  * Use php5-fpm FastCGI process manager.
  * Change webserver from Apache2 to nginx.
  * Add PFS (Perfect Forward Secrecy) support and other security
    improvements.
  * Improve 'openmediavault' PAM configuration. Block users for 180sec
    after 3 failed WebGUI login attempts. Check the pam_tally2 manual
    page for more information.
  * Introduce new OMV configuration engine backend for PAM.
  * Introduce new WebGUI layout.
  * Add ability to customize WebGUI look via 'css/omv-custom.css' file.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 24 Apr 2014 07:18:45 +0200

openmediavault (0.6.0.9) stable; urgency=low

  * Add option to omv-firstaid to clear the local upload package
    repository.
  * Supporting stateless address autoconfiguration (SLAAC) for IPv6
    network interfaces.
  * Supporting stateful address autoconfiguration for IPv6 network interfaces.
  * Disable fancy boot messages.
  * Increase performance of omv-jsminify.
  * Mantis 0001028: Error trying to start rsync job maually.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Apr 2014 00:25:45 +0200

openmediavault (0.6.0.8) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.
  * Hardening connection to engine daemon.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 16 Apr 2014 22:40:17 +0200

openmediavault (0.6.0.7) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 15 Apr 2014 22:33:10 +0200

openmediavault (0.6.0.6) stable; urgency=low

  * Various improvements and modification for Debian Wheezy.