@@ -349,8 +349,14 @@ case "$1" in
 			invoke-rc.d monit reload
 		fi
 		if dpkg --compare-versions "$2" lt-nl "0.6.0.11"; then
+			# Add service enable/disable flag.
 			omv_config_add_element "/config/services/smb/shares/share" "enable" "1"
 			omv_config_add_element "/config/services/rsync/server/modules/module" "enable" "1"
+			# Introduce new SMB share configuration option (convert the
+			# existing configuration option).
+			omv_config_add_element "/config/services/smb/shares/share[guestok='0']" "guest" "no"
+			omv_config_add_element "/config/services/smb/shares/share[guestok='1']" "guest" "only"
+			omv_config_delete "/config/services/smb/shares/share/guestok"
 		fi
 	;;
 
