@@ -436,7 +436,7 @@
 					<sharedfolderref>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</sharedfolderref>
 					<name>xxx</name>
 					<comment>xxx</comment>
-					<guestok>0|1</guestok>
+					<guest>no|allow|only</guest>
 					<readonly>0|1</readonly>
 					<browseable>0|1</browseable>
 					<recyclebin>0|1</recyclebin>
